Sonar fix 4: Bugs