@@ -83,6 +83,7 @@ public class GrantClosureController {
     public static final String REQUEST_MODIFICATIONS = "Request Modifications";
     public static final String TENANT = "%TENANT%";
     public static final String FILE_SEPARATOR = "/";
+    public static final String UTF_8 = "UTF-8";
 
 
     @Autowired
@@ -134,7 +135,7 @@ public class GrantClosureController {
 
     @GetMapping("/{closureId}")
     public GrantClosure getClosure(@PathVariable("userId") Long userId, @RequestHeader("X-TENANT-CODE") String tenantCode,
-                                @PathVariable("closureId") Long closureId) {
+                                   @PathVariable("closureId") Long closureId) {
 
         GrantClosure closure = closureService.getClosureById(closureId);
 
@@ -157,19 +158,19 @@ public class GrantClosureController {
     public List<GrantClosure> getGrantClosuresForUser(
             @PathVariable("userId") Long userId,
             @RequestHeader("X-TENANT-CODE") String tenantCode
-    ){
+    ) {
 
         Organization userOrg = userService.getUserById(userId).getOrganization();
         List<GrantClosure> closures = new ArrayList<>();
-        if(userOrg.getOrganizationType().equalsIgnoreCase(GRANTEE)){
+        if (userOrg.getOrganizationType().equalsIgnoreCase(GRANTEE)) {
             closures = closureService.getClosuresForGranteeUser(userId);
-        }else if(userOrg.getOrganizationType().equalsIgnoreCase(GRANTER)){
+        } else if (userOrg.getOrganizationType().equalsIgnoreCase(GRANTER)) {
             closures = closureService.getClosuresForUser(userId);
         }
 
 
-        for(GrantClosure closure : closures){
-            closureToReturn(closure,userId);
+        for (GrantClosure closure : closures) {
+            closureToReturn(closure, userId);
         }
         return closures;
     }
@@ -200,7 +201,7 @@ public class GrantClosureController {
         closure.setGrant(grant);
         closure.setTemplate(closureTemplate);
         closure.setStatus(workflowStatusService.findInitialStatusByObjectAndGranterOrgId("GRANTCLOSURE",
-                organizationService.findOrganizationByTenantCode(tenantCode).getId(),grant.getGrantTypeId()));
+                organizationService.findOrganizationByTenantCode(tenantCode).getId(), grant.getGrantTypeId()));
 
         closure.getGrant().setClosureInProgress(true);
         grantService.saveGrant(closure.getGrant());
@@ -223,7 +224,7 @@ public class GrantClosureController {
 
         List<WorkflowStatusTransition> supportedTransitions = workflowStatusTransitionService
                 .getStatusTransitionsForWorkflow(
-                        workflowService.findDefaultByGranterAndObjectAndType(granterOrg, "GRANTCLOSURE",grant.getGrantTypeId()));
+                        workflowService.findDefaultByGranterAndObjectAndType(granterOrg, "GRANTCLOSURE", grant.getGrantTypeId()));
 
         List<WorkflowStatus> statuses = new ArrayList<>();
         ClosureAssignments assignment = null;
@@ -248,13 +249,13 @@ public class GrantClosureController {
             assignment.setClosure(closure);
             assignment.setStateId(status.getId());
 
-            if(Boolean.TRUE.equals(status.getTerminal())){
+            if (Boolean.TRUE.equals(status.getTerminal())) {
                 final GrantClosure finalclosure = closure;
 
-                Optional<GrantAssignments> optionalActiveStateOwner =  grantService.getGrantWorkflowAssignments(closure.getGrant()).stream().filter(ass -> ass.getStateId().longValue()==finalclosure.getGrant().getGrantStatus().getId().longValue()).findFirst();
-                GrantAssignments activeStateOwner = optionalActiveStateOwner.isPresent()?optionalActiveStateOwner.get():null;
+                Optional<GrantAssignments> optionalActiveStateOwner = grantService.getGrantWorkflowAssignments(closure.getGrant()).stream().filter(ass -> ass.getStateId().longValue() == finalclosure.getGrant().getGrantStatus().getId().longValue()).findFirst();
+                GrantAssignments activeStateOwner = optionalActiveStateOwner.isPresent() ? optionalActiveStateOwner.get() : null;
 
-                if(activeStateOwner!=null) {
+                if (activeStateOwner != null) {
                     assignment.setAssignment(activeStateOwner.getAssignments());
                 }
             }
@@ -289,7 +290,7 @@ public class GrantClosureController {
             specificSection = closureService.saveClosureSpecificSection(specificSection);
             ClosureSpecificSection finalSpecificSection = specificSection;
             GrantClosure finalClosure = closure;
-            final AtomicInteger[] attribVOOrder = { new AtomicInteger(1) };
+            final AtomicInteger[] attribVOOrder = {new AtomicInteger(1)};
 
             if (specificSection.getSectionName().equalsIgnoreCase(PROJECT_INDICATORS)) {
                 for (Map<DatePeriod, PeriodAttribWithLabel> hold : getPeriodsWithAttributes(closure.getGrant(), userId)) {
@@ -361,7 +362,7 @@ public class GrantClosureController {
                 if (specificSectionAttribute.getFieldType().equalsIgnoreCase(DISBURSEMENT)) {
                     if (closureTemplateHasDisbursement.get()) {
                         ObjectMapper mapper = new ObjectMapper();
-                        String[] colHeaders = new String[] {DISBURSEMENT_DATE, ACTUAL_DISBURSEMENT,
+                        String[] colHeaders = new String[]{DISBURSEMENT_DATE, ACTUAL_DISBURSEMENT,
                                 FUNDS_FROM_OTHER_SOURCES, NOTES};
                         List<TableData> tableDataList = new ArrayList<>();
                         TableData tableData = new TableData();
@@ -372,7 +373,7 @@ public class GrantClosureController {
                         for (int i = 0; i < tableData.getColumns().length; i++) {
 
 
-                            tableData.getColumns()[i] = new ColumnData(colHeaders[i], STRNOSPACE,getType(i));
+                            tableData.getColumns()[i] = new ColumnData(colHeaders[i], STRNOSPACE, getType(i));
                         }
                         tableDataList.add(tableData);
 
@@ -428,11 +429,11 @@ public class GrantClosureController {
     }
 
     private String getType(int i) {
-        if(i == 1 || i == 2) {
+        if (i == 1 || i == 2) {
             return CURRENCY;
-        }else if(i == 0){
+        } else if (i == 0) {
             return DATE;
-        }else{
+        } else {
             return null;
         }
     }
@@ -587,6 +588,7 @@ public class GrantClosureController {
         periodsWithAttributes.add(yearlyPeriods);
         return periodsWithAttributes;
     }
+
     private GrantClosure closureToReturn(GrantClosure closure, Long userId) {
 
         closure.setStringAttributes(closureService.getStringAttributesForClosure(closure));
@@ -611,7 +613,7 @@ public class GrantClosureController {
         closure.setWorkflowAssignment(workflowAssignments);
         List<ClosureAssignments> closureAssignments = determineCanManage(closure, userId);
 
-        setGranteeUse(closure,userService.getUserById(userId).getOrganization().getOrganizationType().equalsIgnoreCase(GRANTEE));
+        setGranteeUse(closure, userService.getUserById(userId).getOrganization().getOrganizationType().equalsIgnoreCase(GRANTEE));
 
         if (closureAssignments != null) {
             for (ClosureAssignments assignment : closureAssignments) {
@@ -628,10 +630,10 @@ public class GrantClosureController {
         }
 
         GrantClosureVO closureVO = new GrantClosureVO().build(closure, closureService.getClosureSections(closure), userService,
-                closureService,reportService);
+                closureService, reportService);
         closure.setClosureDetails(closureVO.getClosureDetails());
 
-        showDisbursementsForClosure(closure,userService.getUserById(userId));
+        showDisbursementsForClosure(closure, userService.getUserById(userId));
 
         closure.setNoteAddedBy(closureVO.getNoteAddedBy());
         closure.setNoteAddedByUser(closureVO.getNoteAddedByUser());
@@ -650,7 +652,7 @@ public class GrantClosureController {
 
         GrantVO grantVO = new GrantVO().build(closure.getGrant(), grantService.getGrantSections(closure.getGrant()),
                 workflowPermissionService, userService.getUserById(userId),
-                userService,grantService);
+                userService, grantService);
 
         ObjectMapper mapper = new ObjectMapper();
         closure.getGrant().setGrantDetails(grantVO.getGrantDetails());
@@ -682,19 +684,19 @@ public class GrantClosureController {
             }
         });
 
-        closure.setFlowAuthorities(closureService.getClosureFlowAuthority(closure, userId));
+        closure.setFlowAuthorities(closureService.getClosureFlowAuthority(closure));
 
         List<GrantTag> grantTags = grantService.getTagsForGrant(closure.getGrant().getId());
 
         closure.getGrant().setGrantTags(grantTags);
 
 
-        closure.setGrant(grantService.grantToReturn(userId,closure.getGrant()));
+        closure.setGrant(grantService.grantToReturn(userId, closure.getGrant()));
 
         return closure;
     }
 
-    public void setGranteeUse(GrantClosure closure,boolean flag){
+    public void setGranteeUse(GrantClosure closure, boolean flag) {
         closure.setForGranteeUse(flag);
     }
 
@@ -731,7 +733,7 @@ public class GrantClosureController {
             if (s.getAttributes() != null && !s.getAttributes().isEmpty()) {
                 s.getAttributes().forEach(a -> {
                     if (a.getFieldType().equalsIgnoreCase(DISBURSEMENT)) {
-                        List<Disbursement> closedDisbursements = getDisbursementsByStatusIds(closure.getGrant(),closedStatusIds); //disbursementService
+                        List<Disbursement> closedDisbursements = getDisbursementsByStatusIds(closure.getGrant(), closedStatusIds); //disbursementService
                         List<Disbursement> draftDisbursements = getDisbursementsByStatusIds(closure.getGrant(), draftStatusIds);
                         if (!closure.getStatus().getInternalStatus().equalsIgnoreCase(CLOSED)) {
                             List<TableData> tableDataList = new ArrayList<>();
@@ -751,8 +753,8 @@ public class GrantClosureController {
                             if (draftDisbursements != null && !draftDisbursements.isEmpty()) {
                                 if (!currentUser.getOrganization().getOrganizationType().equalsIgnoreCase(GRANTEE)) {
                                     draftDisbursements.removeIf(dd -> ((dd.getReportId() != null
-                                            && dd.getReportId().longValue() != closure.getId().longValue()  && dd.isGranteeEntry()) || (dd.getReportId() != null
-                                            && dd.getReportId().longValue() == closure.getId().longValue()  && dd.isGranteeEntry() && closure.getStatus().getInternalStatus().equalsIgnoreCase(ACTIVE))));
+                                            && dd.getReportId().longValue() != closure.getId().longValue() && dd.isGranteeEntry()) || (dd.getReportId() != null
+                                            && dd.getReportId().longValue() == closure.getId().longValue() && dd.isGranteeEntry() && closure.getStatus().getInternalStatus().equalsIgnoreCase(ACTIVE))));
 
                                 }
                                 if (draftDisbursements != null) {
@@ -767,7 +769,6 @@ public class GrantClosureController {
                                     });
                                 }
                             }
-
 
 
                             finalActualDisbursements.sort(Comparator.comparing(ActualDisbursement::getId));
@@ -789,7 +790,7 @@ public class GrantClosureController {
                                         td.setEnteredByGrantee(true);
                                     }
 
-                                    if(currentUser.getOrganization().getOrganizationType().equalsIgnoreCase(GRANTEE) && td.isEnteredByGrantee() && closure.getId().longValue()!=repId.longValue() && !disbursementService.getDisbursementById(ad.getDisbursementId()).getStatus().getInternalStatus().equalsIgnoreCase(CLOSED)){
+                                    if (currentUser.getOrganization().getOrganizationType().equalsIgnoreCase(GRANTEE) && td.isEnteredByGrantee() && closure.getId().longValue() != repId.longValue() && !disbursementService.getDisbursementById(ad.getDisbursementId()).getStatus().getInternalStatus().equalsIgnoreCase(CLOSED)) {
                                         td.setShowForGrantee(false);
                                     }
 
@@ -913,8 +914,8 @@ public class GrantClosureController {
 
     private List<Disbursement> getDisbursementsByStatusIds(Grant grant, List<Long> statusIds) {
         List<Disbursement> closedDisbursements = disbursementService.getDibursementsForGrantByStatuses(grant.getId(), statusIds);
-        if(grant.getOrigGrantId()!=null){
-            closedDisbursements.addAll(getDisbursementsByStatusIds(grantService.getById(grant.getOrigGrantId()),statusIds));
+        if (grant.getOrigGrantId() != null) {
+            closedDisbursements.addAll(getDisbursementsByStatusIds(grantService.getById(grant.getOrigGrantId()), statusIds));
         }
         return closedDisbursements;
     }
@@ -922,12 +923,12 @@ public class GrantClosureController {
     @PostMapping("/{closureId}/template/{templateId}/section/{sectionName}/{isRefund}")
     @ApiOperation("Create new section in grant closure")
     public ClosureSectionInfo createSection(@RequestBody GrantClosure closureToSave,
-                                           @PathVariable("closureId") Long closureId,
-                                           @PathVariable("templateId") Long templateId,
-                                           @PathVariable("sectionName") String sectionName,
-                                           @PathVariable("userId") Long userId,
-                                           @PathVariable("isRefund") Boolean isRefund,
-                                           @RequestHeader("X-TENANT-CODE") String tenantCode) {
+                                            @PathVariable("closureId") Long closureId,
+                                            @PathVariable("templateId") Long templateId,
+                                            @PathVariable("sectionName") String sectionName,
+                                            @PathVariable("userId") Long userId,
+                                            @PathVariable("isRefund") Boolean isRefund,
+                                            @RequestHeader("X-TENANT-CODE") String tenantCode) {
         GrantClosure closure = saveClosure(closureId, closureToSave, userId, tenantCode);
 
         ClosureSpecificSection specificSection = new ClosureSpecificSection();
@@ -940,13 +941,13 @@ public class GrantClosureController {
         specificSection.setSectionOrder(closureService
                 .getNextSectionOrder(organizationService.findOrganizationByTenantCode(tenantCode).getId(), templateId));
         specificSection.setRefund(isRefund);
-        if(Boolean.TRUE.equals(isRefund)){
+        if (Boolean.TRUE.equals(isRefund)) {
             specificSection.setSystemGenerated(true);
         }
         specificSection = closureService.saveSection(specificSection);
 
         if (closureService.checkIfClosureTemplateChanged(closure, specificSection, null)) {
-            closureService._createNewClosureTemplateFromExisiting(closure);
+            closureService.createNewClosureTemplateFromExisiting(closure);
         }
 
         closure = closureToReturn(closure, userId);
@@ -972,7 +973,7 @@ public class GrantClosureController {
         if (savedClosure.isCanManage())
             closure = processClosure(closureToSave, tenantOrg, user);
 
-        if(closure!=null) {
+        if (closure != null) {
             closure.getGrant().setClosureInProgress(true);
             grantService.saveGrant(closure.getGrant());
         }
@@ -1000,12 +1001,12 @@ public class GrantClosureController {
                     .getTenantWorkflowStatuses(REPORT, closure.getGrant().getGrantorOrganization().getId())
                     .stream().filter(s -> s.getInternalStatus().equalsIgnoreCase(CLOSED)).findFirst();
             approvedReports = reportService.findByGrantAndStatus(closure.getGrant(),
-                    optionalWorkflowStatus.isPresent()?optionalWorkflowStatus.get():null,
+                    optionalWorkflowStatus.isPresent() ? optionalWorkflowStatus.get() : null,
                     closure.getId());
             if (approvedReports == null || approvedReports.isEmpty()) {
                 try {
                     closure.setLinkedApprovedReports(
-                            new ObjectMapper().writeValueAsString(Arrays.asList( 0l )));
+                            new ObjectMapper().writeValueAsString(Arrays.asList(0l)));
                 } catch (JsonProcessingException e) {
                     logger.error(e.getMessage(), e);
                 }
@@ -1191,7 +1192,7 @@ public class GrantClosureController {
         stringAttribute = closureService.saveClosureStringAttribute(stringAttribute);
 
         if (closureService.checkIfClosureTemplateChanged(closure, closureSection, newSectionAttribute)) {
-            closureService._createNewClosureTemplateFromExisiting(closure);
+            closureService.createNewClosureTemplateFromExisiting(closure);
         }
 
         closure = closureToReturn(closure, userId);
@@ -1200,11 +1201,11 @@ public class GrantClosureController {
 
     @PutMapping("/{closureId}/template/{templateId}/section/{sectionId}")
     public GrantClosure deleteSection(@RequestBody GrantClosure closureToSave,
-                                @PathVariable("closureId") Long closureId,
-                                @PathVariable("templateId") Long templateId,
-                                @PathVariable("sectionId") Long sectionId,
-                                @PathVariable("userId") Long userId,
-                                @RequestHeader("X-TENANT-CODE") String tenantCode) {
+                                      @PathVariable("closureId") Long closureId,
+                                      @PathVariable("templateId") Long templateId,
+                                      @PathVariable("sectionId") Long sectionId,
+                                      @PathVariable("userId") Long userId,
+                                      @RequestHeader("X-TENANT-CODE") String tenantCode) {
 
         ClosureSpecificSection section = closureService.getClosureSpecificSectionById(sectionId);
         GrantClosure closure = closureService.getClosureById(closureId);
@@ -1224,8 +1225,8 @@ public class GrantClosureController {
         closureService.deleteSection(section);
 
 
-        if(Boolean.TRUE.equals(section.getRefund())){
-            if(closureToSave.getGrant().getActualRefunds()!=null && !closureToSave.getGrant().getActualRefunds().isEmpty()){
+        if (Boolean.TRUE.equals(section.getRefund())) {
+            if (closureToSave.getGrant().getActualRefunds() != null && !closureToSave.getGrant().getActualRefunds().isEmpty()) {
                 grantService.deleteActualRefundsForGrant(closureToSave.getGrant().getActualRefunds());
             }
             closureToSave.getGrant().setRefundAmount(null);
@@ -1234,7 +1235,7 @@ public class GrantClosureController {
 
         closure = closureService.getClosureById(closureId);
         if (closureService.checkIfClosureTemplateChanged(closure, section, null)) {
-            GranterClosureTemplate newTemplate = closureService._createNewClosureTemplateFromExisiting(closure);
+            GranterClosureTemplate newTemplate = closureService.createNewClosureTemplateFromExisiting(closure);
             newTemplate.getId();
         }
         closure = closureToReturn(closure, userId);
@@ -1265,7 +1266,7 @@ public class GrantClosureController {
 
         GrantClosure closure = closureService.getClosureById(closureId);
         if (closureService.checkIfClosureTemplateChanged(closure, currentAttribute.getSection(), currentAttribute)) {
-            closureService._createNewClosureTemplateFromExisiting(closure);
+            closureService.createNewClosureTemplateFromExisiting(closure);
         }
 
         closure = closureToReturn(closure, userId);
@@ -1309,7 +1310,7 @@ public class GrantClosureController {
         String filePath = null;
         try {
             file = resourceLoader
-                    .getResource(FILE + uploadLocation + URLDecoder.decode(libraryDoc.getLocation(), "UTF-8"))
+                    .getResource(FILE + uploadLocation + URLDecoder.decode(libraryDoc.getLocation(), UTF_8))
                     .getFile();
 
             User user = userService.getUserById(userId);
@@ -1329,7 +1330,7 @@ public class GrantClosureController {
             File fileToCreate = new File(dir, libraryDoc.getName() + "." + libraryDoc.getType());
             FileCopyUtils.copy(file, fileToCreate);
         } catch (IOException e) {
-            logger.error(e.getMessage(),e);
+            logger.error(e.getMessage(), e);
         }
         ClosureStringAttributeAttachments attachment = new ClosureStringAttributeAttachments();
         attachment.setCreatedBy(userService.getUserById(userId).getEmailId());
@@ -1350,7 +1351,7 @@ public class GrantClosureController {
             stringAttribute.setValue(mapper.writeValueAsString(stringAttributeAttachments));
             closureService.saveClosureStringAttribute(stringAttribute);
         } catch (JsonProcessingException e) {
-            logger.error(e.getMessage(),e);
+            logger.error(e.getMessage(), e);
         }
         GrantClosure closure = closureService.getClosureById(closureId);
         closure = closureToReturn(closure, userId);
@@ -1358,7 +1359,7 @@ public class GrantClosureController {
     }
 
     @PostMapping(value = "/{closureId}/section/{sectionId}/attribute/{attributeId}/upload", consumes = {
-            "multipart/form-data" })
+            "multipart/form-data"})
     public ClosureDocInfo saveUploadedFiles(
             @PathVariable("sectionId") Long sectionId,
             @PathVariable("userId") Long userId,
@@ -1379,36 +1380,35 @@ public class GrantClosureController {
 
         ClosureStringAttribute attr = closureService.getClosureStringByStringAttributeId(attributeId);
         String filePath = STRNOSPACE;
-            filePath = uploadLocation + closure.getGrant().getGrantorOrganization().getCode() + CLOSURE_DOCUMENTS + closureId
-                    + FILE_SEPARATOR + attr.getSection().getId() + FILE_SEPARATOR + attr.getSectionAttribute().getId() + FILE_SEPARATOR;
+        filePath = uploadLocation + closure.getGrant().getGrantorOrganization().getCode() + CLOSURE_DOCUMENTS + closureId
+                + FILE_SEPARATOR + attr.getSection().getId() + FILE_SEPARATOR + attr.getSectionAttribute().getId() + FILE_SEPARATOR;
         File dir = new File(filePath);
         dir.mkdirs();
         List<ClosureStringAttributeAttachments> attachments = new ArrayList<>();
 
 
-
         for (MultipartFile file : files) {
-            if(file.getOriginalFilename()!=null){
-            String fileName = file.getOriginalFilename();
-            File fileToCreate = new File(dir, fileName);
-            try (FileOutputStream fos = new FileOutputStream(fileToCreate)) {
-                fos.write(file.getBytes());
-            } catch (IOException e) {
-                logger.error(e.getMessage(), e);
+            if (file.getOriginalFilename() != null) {
+                String fileName = file.getOriginalFilename();
+                File fileToCreate = new File(dir, fileName);
+                try (FileOutputStream fos = new FileOutputStream(fileToCreate)) {
+                    fos.write(file.getBytes());
+                } catch (IOException e) {
+                    logger.error(e.getMessage(), e);
+                }
+                ClosureStringAttributeAttachments attachment = new ClosureStringAttributeAttachments();
+                attachment.setVersion(1);
+                attachment.setType(FilenameUtils.getExtension(fileName));
+                attachment.setTitle(fileName != null ? fileName.replace("." + FilenameUtils.getExtension(fileName), STRNOSPACE) : "");
+                attachment.setLocation(filePath);
+                attachment.setName(fileName != null ? fileName.replace("." + FilenameUtils.getExtension(fileName), STRNOSPACE) : "");
+                attachment.setClosureStringAttribute(attr);
+                attachment.setDescription(fileName != null ? fileName.replace("." + FilenameUtils.getExtension(fileName), STRNOSPACE) : "");
+                attachment.setCreatedOn(new Date());
+                attachment.setCreatedBy(userService.getUserById(userId).getEmailId());
+                attachment = closureService.saveClosureStringAttributeAttachment(attachment);
+                attachments.add(attachment);
             }
-            ClosureStringAttributeAttachments attachment = new ClosureStringAttributeAttachments();
-            attachment.setVersion(1);
-            attachment.setType(FilenameUtils.getExtension(fileName));
-            attachment.setTitle(fileName!=null?fileName.replace("." + FilenameUtils.getExtension(fileName), STRNOSPACE):"");
-            attachment.setLocation(filePath);
-            attachment.setName(fileName!=null?fileName.replace("." + FilenameUtils.getExtension(fileName), STRNOSPACE):"");
-            attachment.setClosureStringAttribute(attr);
-            attachment.setDescription(fileName!=null?fileName.replace("." + FilenameUtils.getExtension(fileName), STRNOSPACE):"");
-            attachment.setCreatedOn(new Date());
-            attachment.setCreatedBy(userService.getUserById(userId).getEmailId());
-            attachment = closureService.saveClosureStringAttributeAttachment(attachment);
-            attachments.add(attachment);
-        }
         }
 
         mapper = new ObjectMapper();
@@ -1429,16 +1429,16 @@ public class GrantClosureController {
             ClosureStringAttribute finalAttr = attr;
             ClosureStringAttribute finalAttr1 = finalAttr;
             Optional<ClosureStringAttribute> optionalClosureStringAttribute = closure.getStringAttributes().stream().filter(g -> g.getId().longValue() == finalAttr1.getId().longValue()).findFirst();
-            finalAttr = optionalClosureStringAttribute.isPresent()?
-                    optionalClosureStringAttribute.get():null;
-                if(finalAttr!=null){
-                    finalAttr.setValue(mapper.writeValueAsString(currentAttachments));
-                }
+            finalAttr = optionalClosureStringAttribute.isPresent() ?
+                    optionalClosureStringAttribute.get() : null;
+            if (finalAttr != null) {
+                finalAttr.setValue(mapper.writeValueAsString(currentAttachments));
+            }
 
             closureService.saveClosure(closure);
 
         } catch (IOException e) {
-            logger.error(e.getMessage(),e);
+            logger.error(e.getMessage(), e);
         }
 
         closure = closureService.getClosureById(closureId);
@@ -1448,7 +1448,7 @@ public class GrantClosureController {
     }
 
     @PostMapping(value = "/{closureId}/upload/docs", consumes = {
-            "multipart/form-data" })
+            "multipart/form-data"})
     public GrantClosure saveUploadedFiles(
             @PathVariable("userId") Long userId,
             @PathVariable("closureId") Long closureId,
@@ -1462,15 +1462,15 @@ public class GrantClosureController {
         File dir = new File(filePath);
         dir.mkdirs();
 
-        ClosureDocument closureDocument=null;
+        ClosureDocument closureDocument = null;
 
         for (MultipartFile file : files) {
             String fileName = file.getOriginalFilename();
             if (fileName != null) {
                 closureDocument = new ClosureDocument();
                 closureDocument.setClosure(closureService.getClosureById(closureId));
-                closureDocument.setExtension(fileName.substring(fileName.lastIndexOf(".")+1));
-                closureDocument.setLocation(filePath+fileName);
+                closureDocument.setExtension(fileName.substring(fileName.lastIndexOf(".") + 1));
+                closureDocument.setLocation(filePath + fileName);
                 closureDocument.setName(fileName);
                 closureDocument.setUploadedBy(userId);
                 closureDocument.setUploadedOn(DateTime.now().toDate());
@@ -1536,7 +1536,7 @@ public class GrantClosureController {
                 }
             } else {
                 file = resourceLoader.getResource(
-                        FILE + uploadLocation + closure.getGrant().getGrantorOrganization().getCode()+CLOSURE_DOCUMENTS + closureId + FILE_SEPARATOR + sectionId + FILE_SEPARATOR
+                        FILE + uploadLocation + closure.getGrant().getGrantorOrganization().getCode() + CLOSURE_DOCUMENTS + closureId + FILE_SEPARATOR + sectionId + FILE_SEPARATOR
                                 + attributeId + FILE_SEPARATOR + attachment.getName() + "." + attachment.getType())
                         .getFile();
                 if (!file.exists()) {
@@ -1553,15 +1553,15 @@ public class GrantClosureController {
             // new zip entry and copying inputstream with file to zipOutputStream, after all
             // closing streams
             zipOutputStream.putNextEntry(new ZipEntry(file.getName()));
-            try(FileInputStream fileInputStream = new FileInputStream(file)){
+            try (FileInputStream fileInputStream = new FileInputStream(file)) {
                 IOUtils.copy(fileInputStream, zipOutputStream);
                 zipOutputStream.closeEntry();
             }
         }
 
-            zipOutputStream.finish();
-            zipOutputStream.flush();
-            zipOutputStream.close();
+        zipOutputStream.finish();
+        zipOutputStream.flush();
+        zipOutputStream.close();
 
         bufferedOutputStream.close();
         byteArrayOutputStream.close();
@@ -1570,8 +1570,8 @@ public class GrantClosureController {
 
     @PostMapping(value = "/{closureId}/docs/download", produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
     public byte[] downloadSelectedClosureDocAttachments(@PathVariable("userId") Long userId,
-                                              @PathVariable("closureId") Long closureId, @RequestHeader("X-TENANT-CODE") String tenantCode,
-                                              @RequestBody AttachmentDownloadRequest downloadRequest, HttpServletResponse response) throws IOException {
+                                                        @PathVariable("closureId") Long closureId, @RequestHeader("X-TENANT-CODE") String tenantCode,
+                                                        @RequestBody AttachmentDownloadRequest downloadRequest, HttpServletResponse response) throws IOException {
 
         // setting headers
         response.setContentType("application/zip");
@@ -1591,14 +1591,14 @@ public class GrantClosureController {
                     .getClosureDocumentById(attachmentId);
 
             File file = null;
-                file = resourceLoader.getResource(FILE + attachment.getLocation())
-                        .getFile();
+            file = resourceLoader.getResource(FILE + attachment.getLocation())
+                    .getFile();
 
 
             // new zip entry and copying inputstream with file to zipOutputStream, after all
             // closing streams
             zipOutputStream.putNextEntry(new ZipEntry(file.getName()));
-            try(FileInputStream fileInputStream = new FileInputStream(file)){
+            try (FileInputStream fileInputStream = new FileInputStream(file)) {
                 IOUtils.copy(fileInputStream, zipOutputStream);
                 zipOutputStream.closeEntry();
             }
@@ -1630,7 +1630,7 @@ public class GrantClosureController {
         try {
             Files.delete(file.toPath());
         } catch (IOException e) {
-            logger.error(e.getMessage(),e);
+            logger.error(e.getMessage(), e);
         }
         ClosureStringAttribute stringAttribute = closureService.findClosureStringAttributeById(attributeId);
         List<ClosureStringAttributeAttachments> stringAttributeAttachments = closureService
@@ -1665,7 +1665,7 @@ public class GrantClosureController {
         try {
             Files.delete(file.toPath());
         } catch (IOException e) {
-            logger.error(e.getMessage(),e);
+            logger.error(e.getMessage(), e);
         }
 
         GrantClosure closure = closureService.getClosureById(closureId);
@@ -1697,17 +1697,16 @@ public class GrantClosureController {
         closureService.deleteSectionAttribute(attribute);
         Optional<ClosureStringAttribute> optionalClosureStringAttribute = closure.getStringAttributes().stream()
                 .filter(g -> g.getId().longValue() == stringAttrib.getId().longValue()).findFirst();
-        ClosureStringAttribute rsa2Delete = optionalClosureStringAttribute.isPresent()?optionalClosureStringAttribute.get():null;
+        ClosureStringAttribute rsa2Delete = optionalClosureStringAttribute.isPresent() ? optionalClosureStringAttribute.get() : null;
         closure.getStringAttributes().remove(rsa2Delete);
         closure = closureService.saveClosure(closure);
 
         if (closureService.checkIfClosureTemplateChanged(closure, attribute.getSection(), null)) {
-            closureService._createNewClosureTemplateFromExisiting(closure);
+            closureService.createNewClosureTemplateFromExisiting(closure);
         }
         closure = closureToReturn(closure, userId);
         return closure;
     }
-
 
 
     @PostMapping("/{closureId}/assignment")
@@ -1722,7 +1721,7 @@ public class GrantClosureController {
         if (closureService.checkIfClosureMovedThroughWFAtleastOnce(closure.getId())) {
 
             closureService.getAssignmentsForClosure(closure).stream().forEach(a ->
-                currentAssignments.put(a.getStateId(), a.getAssignment()));
+                    currentAssignments.put(a.getStateId(), a.getAssignment()));
         }
         String customAss = null;
         UriComponents uriComponents = ServletUriComponentsBuilder.fromCurrentContextPath().build();
@@ -1754,55 +1753,57 @@ public class GrantClosureController {
                 String code = null;
 
                 code = Base64.getEncoder().encodeToString(String.valueOf(closure.getId()).getBytes());
+                try {
+                    if (existingUser != null && existingUser.isActive()) {
+                        granteeUser = existingUser;
+                        url = new StringBuilder(url + "/home/?action=login&org="
+                                + URLEncoder.encode(closure.getGrant().getOrganization().getName(),UTF_8) + "&r=" + code
+                                + EMAIL + granteeUser.getEmailId() + "&type=closure").toString();
+                    } else if (existingUser != null && !existingUser.isActive()) {
+                        granteeUser = existingUser;
+                        url = new StringBuilder(url + "/home/?action=registration&org="
+                                + URLEncoder.encode(closure.getGrant().getOrganization().getName(),UTF_8) + "&r=" + code
+                                + EMAIL + granteeUser.getEmailId() + "&type=closure").toString();
 
-                if (existingUser != null && existingUser.isActive()) {
-                    granteeUser = existingUser;
-                    url = new StringBuilder(url + "/home/?action=login&org="
-                            + URLEncoder.encode(closure.getGrant().getOrganization().getName()) + "&r=" + code
-                            + EMAIL + granteeUser.getEmailId() + "&type=closure").toString();
-                } else if (existingUser != null && !existingUser.isActive()) {
-                    granteeUser = existingUser;
-                    url = new StringBuilder(url + "/home/?action=registration&org="
-                            + URLEncoder.encode(closure.getGrant().getOrganization().getName()) + "&r=" + code
-                            + EMAIL + granteeUser.getEmailId() + "&type=closure").toString();
+                    } else {
+                        granteeUser = new User();
+                        Role newRole = roleService.findByOrganizationAndName(closure.getGrant().getOrganization(), "Admin");
 
-                } else {
-                    granteeUser = new User();
-                    Role newRole = roleService.findByOrganizationAndName(closure.getGrant().getOrganization(), "Admin");
+                        UserRole userRole = new UserRole();
+                        userRole.setRole(newRole);
+                        userRole.setUser(granteeUser);
 
-                    UserRole userRole = new UserRole();
-                    userRole.setRole(newRole);
-                    userRole.setUser(granteeUser);
-
-                    List<UserRole> userRoles = new ArrayList<>();
-                    userRoles.add(userRole);
-                    granteeUser.setUserRoles(userRoles);
-                    granteeUser.setFirstName(STRNOSPACE);
-                    granteeUser.setLastName(STRNOSPACE);
-                    granteeUser.setEmailId(customAss);
-                    granteeUser.setOrganization(closure.getGrant().getOrganization());
-                    granteeUser.setActive(false);
-                    granteeUser = userService.save(granteeUser);
-                    userRoleService.saveUserRole(userRole);
-                    url = new StringBuilder(url + "/home/?action=registration&org="
-                            + URLEncoder.encode(closure.getGrant().getOrganization().getName()) + "&r=" + code
-                            + EMAIL + granteeUser.getEmailId() + "&type=report").toString();
+                        List<UserRole> userRoles = new ArrayList<>();
+                        userRoles.add(userRole);
+                        granteeUser.setUserRoles(userRoles);
+                        granteeUser.setFirstName(STRNOSPACE);
+                        granteeUser.setLastName(STRNOSPACE);
+                        granteeUser.setEmailId(customAss);
+                        granteeUser.setOrganization(closure.getGrant().getOrganization());
+                        granteeUser.setActive(false);
+                        granteeUser = userService.save(granteeUser);
+                        userRoleService.saveUserRole(userRole);
+                        url = new StringBuilder(url + "/home/?action=registration&org="
+                                + URLEncoder.encode(closure.getGrant().getOrganization().getName(), UTF_8) + "&r=" + code
+                                + EMAIL + granteeUser.getEmailId() + "&type=report").toString();
+                    }
+                } catch (Exception e) {
+                    logger.error(e.getMessage(), e);
                 }
-
                 String[] notifications = closureService.buildClosureInvitationContent(closure,
                         appConfigService.getAppConfigForGranterOrg(closure.getGrant().getGrantorOrganization().getId(),
                                 AppConfiguration.CLOSURE_INVITE_SUBJECT).getConfigValue(),
                         appConfigService.getAppConfigForGranterOrg(closure.getGrant().getGrantorOrganization().getId(),
                                 AppConfiguration.CLOSURE_INVITE_MESSAGE).getConfigValue(),
                         url);
-                commonEmailSevice.sendMail(new String[] { !granteeUser.isDeleted() ? granteeUser.getEmailId() : null },
+                commonEmailSevice.sendMail(new String[]{!granteeUser.isDeleted() ? granteeUser.getEmailId() : null},
                         null, notifications[0], notifications[1],
-                        new String[] { appConfigService
+                        new String[]{appConfigService
                                 .getAppConfigForGranterOrg(closure.getGrant().getGrantorOrganization().getId(),
                                         AppConfiguration.PLATFORM_EMAIL_FOOTER)
                                 .getConfigValue()
-                                .replace(RELEASE_VERSION, releaseService.getCurrentRelease().getVersion()).replace(TENANT,closure.getGrant()
-                                .getGrantorOrganization().getName()) });
+                                .replace(RELEASE_VERSION, releaseService.getCurrentRelease().getVersion()).replace(TENANT, closure.getGrant()
+                                .getGrantorOrganization().getName())});
 
                 assignment.setAssignment(granteeUser.getId());
             }
@@ -1836,12 +1837,12 @@ public class GrantClosureController {
                             ccUsers.stream().map(User::getEmailId).collect(
                                     Collectors.toList()).toArray(new String[ccUsers.size()]),
                             notifications[0], notifications[1],
-                            new String[] { appConfigService
+                            new String[]{appConfigService
                                     .getAppConfigForGranterOrg(closure.getGrant().getGrantorOrganization().getId(),
                                             AppConfiguration.PLATFORM_EMAIL_FOOTER)
                                     .getConfigValue().replace(RELEASE_VERSION,
-                                    releaseService.getCurrentRelease().getVersion()).replace(TENANT,closure.getGrant()
-                                    .getGrantorOrganization().getName()) });
+                                            releaseService.getCurrentRelease().getVersion()).replace(TENANT, closure.getGrant()
+                                    .getGrantorOrganization().getName())});
 
             Map<Long, Long> cleanAsigneesList = new HashMap<>();
             for (Long ass : currentAssignments.values()) {
@@ -1862,7 +1863,7 @@ public class GrantClosureController {
             final GrantClosure finalClosure = closure;
 
             cleanAsigneesList.keySet().stream().forEach(u ->
-                notificationsService.saveNotification(finaNotifications, u, finalClosure.getId(), REPORT)
+                    notificationsService.saveNotification(finaNotifications, u, finalClosure.getId(), REPORT)
             );
 
         }
@@ -1873,11 +1874,11 @@ public class GrantClosureController {
 
     @PostMapping("/{closureId}/flow/{fromState}/{toState}")
     public GrantClosure moveClosureState(@RequestBody ClosureWithNote closureWithNote,
-                                        @PathVariable("userId") Long userId,
-                                        @PathVariable("closureId") Long closureId,
-                                        @PathVariable("fromState") Long fromStateId,
-                                        @PathVariable("toState") Long toStateId,
-                                        @RequestHeader("X-TENANT-CODE") String tenantCode) {
+                                         @PathVariable("userId") Long userId,
+                                         @PathVariable("closureId") Long closureId,
+                                         @PathVariable("fromState") Long fromStateId,
+                                         @PathVariable("toState") Long toStateId,
+                                         @RequestHeader("X-TENANT-CODE") String tenantCode) {
 
         saveClosure(closureId, closureWithNote.getClosure(), userId, tenantCode);
 
@@ -1919,7 +1920,7 @@ public class GrantClosureController {
 
         List<User> usersToNotify = new ArrayList<>();
         List<ClosureAssignments> assigments = closureService.getAssignmentsForClosure(closure);
-        assigments.removeIf(e -> e.getAssignment()==null);
+        assigments.removeIf(e -> e.getAssignment() == null);
         assigments.forEach(ass -> {
             if (usersToNotify.stream().noneMatch(u -> u.getId().longValue() == ass.getAssignment().longValue())) {
                 usersToNotify.add(userService.getUserById(ass.getAssignment()));
@@ -1932,7 +1933,7 @@ public class GrantClosureController {
                 .findAny();
         User currentOwner = null;
         String currentOwnerName = STRNOSPACE;
-        if (closureAss.isPresent() && closureAss.get().getAssignment()!=null) {
+        if (closureAss.isPresent() && closureAss.get().getAssignment() != null) {
 
             currentOwner = userService.getUserById(closureAss.get().getAssignment());
             currentOwnerName = currentOwner.getFirstName().concat(STREMPTY).concat(currentOwner.getLastName());
@@ -1961,7 +1962,7 @@ public class GrantClosureController {
                             AppConfiguration.CLOSURE_STATE_CHANGED_MAIL_MESSAGE).getConfigValue(),
                     workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName, previousState.getName(),
                     previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                    transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                    transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE) ? YES
                             : NO,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
@@ -1969,16 +1970,16 @@ public class GrantClosureController {
                             : STRNOSPACE,
                     null, null, null, null, null);
             commonEmailSevice
-                    .sendMail(new String[] { !currentOwner.isDeleted() ? currentOwner.getEmailId() : null },
+                    .sendMail(new String[]{!currentOwner.isDeleted() ? currentOwner.getEmailId() : null},
                             usersToNotify.stream().map(User::getEmailId).collect(Collectors.toList())
                                     .toArray(new String[usersToNotify.size()]),
                             emailNotificationContent[0], emailNotificationContent[1],
-                            new String[] { appConfigService
+                            new String[]{appConfigService
                                     .getAppConfigForGranterOrg(finalClosure.getGrant().getGrantorOrganization().getId(),
                                             AppConfiguration.PLATFORM_EMAIL_FOOTER)
                                     .getConfigValue().replace(RELEASE_VERSION,
-                                    releaseService.getCurrentRelease().getVersion()).replace(TENANT,finalClosure.getGrant()
-                                    .getGrantorOrganization().getName()) });
+                                            releaseService.getCurrentRelease().getVersion()).replace(TENANT, finalClosure.getGrant()
+                                    .getGrantorOrganization().getName())});
 
             String[] notificationContent = closureService.buildEmailNotificationContent(finalClosure, currentOwner,
                     appConfigService.getAppConfigForGranterOrg(finalClosure.getGrant().getGrantorOrganization().getId(),
@@ -1987,7 +1988,7 @@ public class GrantClosureController {
                             AppConfiguration.REPORT_STATE_CHANGED_MAIL_MESSAGE).getConfigValue(),
                     workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName, previousState.getName(),
                     previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                    transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                    transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE) ? YES
                             : NO,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
@@ -2011,7 +2012,7 @@ public class GrantClosureController {
                         workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName,
                         previousState.getName(),
                         previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                        transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                        transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
                                 ? YES
                                 : NO,
@@ -2037,7 +2038,7 @@ public class GrantClosureController {
                             AppConfiguration.CLOSURE_STATE_CHANGED_MAIL_MESSAGE).getConfigValue(),
                     workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName, previousState.getName(),
                     previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                    transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                    transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE) ? YES
                             : NO,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
@@ -2045,16 +2046,16 @@ public class GrantClosureController {
                             : STRNOSPACE,
                     null, null, null, null, null);
             commonEmailSevice
-                    .sendMail(new String[] { !currentOwner.isDeleted() ? currentOwner.getEmailId() : null },
+                    .sendMail(new String[]{!currentOwner.isDeleted() ? currentOwner.getEmailId() : null},
                             usersToNotify.stream().map(User::getEmailId).collect(Collectors.toList())
                                     .toArray(new String[usersToNotify.size()]),
                             emailNotificationContent[0], emailNotificationContent[1],
-                            new String[] { appConfigService
+                            new String[]{appConfigService
                                     .getAppConfigForGranterOrg(finalClosure.getGrant().getGrantorOrganization().getId(),
                                             AppConfiguration.PLATFORM_EMAIL_FOOTER)
                                     .getConfigValue().replace(RELEASE_VERSION,
-                                    releaseService.getCurrentRelease().getVersion()).replace(TENANT,finalClosure.getGrant()
-                                    .getGrantorOrganization().getName()) });
+                                            releaseService.getCurrentRelease().getVersion()).replace(TENANT, finalClosure.getGrant()
+                                    .getGrantorOrganization().getName())});
 
             String[] notificationContent = closureService.buildEmailNotificationContent(finalClosure, currentOwner,
                     appConfigService.getAppConfigForGranterOrg(finalClosure.getGrant().getGrantorOrganization().getId(),
@@ -2063,7 +2064,7 @@ public class GrantClosureController {
                             AppConfiguration.CLOSURE_STATE_CHANGED_MAIL_MESSAGE).getConfigValue(),
                     workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName, previousState.getName(),
                     previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                    transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                    transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE) ? YES
                             : NO,
                     closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
@@ -2087,7 +2088,7 @@ public class GrantClosureController {
                         workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName,
                         previousState.getName(),
                         previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                        transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                        transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
                                 ? YES
                                 : NO,
@@ -2100,9 +2101,9 @@ public class GrantClosureController {
             });
         } else {
 
-            Optional<User> granteeUsr =  usersToNotify.stream()
+            Optional<User> granteeUsr = usersToNotify.stream()
                     .filter(u -> u.getOrganization().getOrganizationType().equalsIgnoreCase(GRANTEE)).findFirst();
-            if(granteeUsr.isPresent()){
+            if (granteeUsr.isPresent()) {
                 User granteeUser = granteeUsr.get();
                 usersToNotify.removeIf(u -> u.getId().longValue() == granteeUser.getId().longValue() || u.isDeleted());
 
@@ -2113,7 +2114,7 @@ public class GrantClosureController {
                                 AppConfiguration.CLOSURE_STATE_CHANGED_MAIL_MESSAGE).getConfigValue(),
                         workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName, previousState.getName(),
                         previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                        transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                        transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE) ? YES
                                 : NO,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
@@ -2121,16 +2122,16 @@ public class GrantClosureController {
                                 : STRNOSPACE,
                         null, null, null, null, null);
                 commonEmailSevice
-                        .sendMail(new String[] { !granteeUser.isDeleted() ? granteeUser.getEmailId() : null },
+                        .sendMail(new String[]{!granteeUser.isDeleted() ? granteeUser.getEmailId() : null},
                                 usersToNotify.stream().map(User::getEmailId).collect(Collectors.toList())
                                         .toArray(new String[usersToNotify.size()]),
                                 emailNotificationContent[0], emailNotificationContent[1],
-                                new String[] { appConfigService
+                                new String[]{appConfigService
                                         .getAppConfigForGranterOrg(finalClosure.getGrant().getGrantorOrganization().getId(),
                                                 AppConfiguration.PLATFORM_EMAIL_FOOTER)
                                         .getConfigValue().replace(RELEASE_VERSION,
-                                        releaseService.getCurrentRelease().getVersion()).replace(TENANT,finalClosure.getGrant()
-                                        .getGrantorOrganization().getName()) });
+                                                releaseService.getCurrentRelease().getVersion()).replace(TENANT, finalClosure.getGrant()
+                                        .getGrantorOrganization().getName())});
 
                 String[] notificationContent = closureService.buildEmailNotificationContent(finalClosure, granteeUser,
                         appConfigService.getAppConfigForGranterOrg(finalClosure.getGrant().getGrantorOrganization().getId(),
@@ -2139,7 +2140,7 @@ public class GrantClosureController {
                                 AppConfiguration.CLOSURE_STATE_CHANGED_MAIL_MESSAGE).getConfigValue(),
                         workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName, previousState.getName(),
                         previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                        transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                        transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE) ? YES
                                 : NO,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
@@ -2165,7 +2166,7 @@ public class GrantClosureController {
                         workflowStatusService.findById(toStateId).getName(), finalCurrentOwnerName,
                         previousState.getName(),
                         previousOwner.getFirstName().concat(STREMPTY).concat(previousOwner.getLastName()),
-                        transition==null? REQUEST_MODIFICATIONS :transition.getAction(), YES, PLEASE_REVIEW,
+                        transition == null ? REQUEST_MODIFICATIONS : transition.getAction(), YES, PLEASE_REVIEW,
                         closureWithNote.getNote() != null && !closureWithNote.getNote().trim().equalsIgnoreCase(STRNOSPACE)
                                 ? YES
                                 : NO,
@@ -2185,14 +2186,14 @@ public class GrantClosureController {
         if (toStatus.getInternalStatus().equalsIgnoreCase(CLOSED)) {
 
             Grant grant = grantService.getById(closure.getGrant().getId());
-            Optional<WorkflowStatus> optionalClosedStatus =  workflowStatusService.findByWorkflow(grant.getGrantStatus().getWorkflow()).
+            Optional<WorkflowStatus> optionalClosedStatus = workflowStatusService.findByWorkflow(grant.getGrantStatus().getWorkflow()).
                     stream().filter(w -> w.getInternalStatus().equalsIgnoreCase(CLOSED)).findFirst();
-            if(optionalClosedStatus.isPresent()){
+            if (optionalClosedStatus.isPresent()) {
                 GrantWithNote gn = new GrantWithNote();
                 gn.setGrant(grant);
                 gn.setNote(
-                        "No note added.<br><i><b>System Note</b>: </i>"+closure.getReason().getReason());
-                grantService.moveToNewState(gn,userId,grant.getId(),grant.getGrantStatus().getId(),optionalClosedStatus.get().getId(),tenantCode);
+                        "No note added.<br><i><b>System Note</b>: </i>" + closure.getReason().getReason());
+                grantService.moveToNewState(gn, userId, grant.getId(), grant.getGrantStatus().getId(), optionalClosedStatus.get().getId(), tenantCode);
             }
         }
         return closure;
@@ -2200,64 +2201,63 @@ public class GrantClosureController {
 
     @GetMapping("{closureId}/changeHistory")
     public PlainClosure getReportHistory(@PathVariable("closureId") Long closureId,
-                                        @PathVariable("userId") Long userId) throws IOException {
+                                         @PathVariable("userId") Long userId) throws IOException {
 
         GrantClosure closure = closureService.getClosureById(closureId);
         ClosureSnapshot snapshot = closureSnapshotService.getMostRecentSnapshotByClosureId(closureId);
 
-        if(snapshot==null){
+        if (snapshot == null) {
             return null;
         }
 
         closure.setReason(snapshot.getReason());
         closure.setDescription(snapshot.getDescription());
         closure.setStatus(workflowStatusService.findById(snapshot.getStatusId()));
-        ClosureDetailVO details = new ObjectMapper().readValue(snapshot.getStringAttributes(),ClosureDetailVO.class);
+        ClosureDetailVO details = new ObjectMapper().readValue(snapshot.getStringAttributes(), ClosureDetailVO.class);
         closure.setClosureDetails(details);
 
-        return closureService.closureToPlain(closure,snapshot);
+        return closureService.closureToPlain(closure, snapshot);
     }
 
     @GetMapping(value = "/compare/{currentClosureId}/{origClosureId}")
-    public List<PlainClosure> getClosuresToCompare(@RequestHeader("X-TENANT-CODE")String tenantCode,
-                                                 @PathVariable("userId")Long userId,
-                                                 @PathVariable("currentClosureId")Long currentClosureId,
-                                                 @PathVariable("origClosureId")Long origClosureId){
+    public List<PlainClosure> getClosuresToCompare(@RequestHeader("X-TENANT-CODE") String tenantCode,
+                                                   @PathVariable("userId") Long userId,
+                                                   @PathVariable("currentClosureId") Long currentClosureId,
+                                                   @PathVariable("origClosureId") Long origClosureId) {
 
         List<PlainClosure> closuresToReturn = new ArrayList<>();
 
         GrantClosure currentClosure = closureService.getClosureById(currentClosureId);
-        currentClosure = closureToReturn(currentClosure,userId);
+        currentClosure = closureToReturn(currentClosure, userId);
 
         GrantClosure origClosure = closureService.getClosureById(origClosureId);
-        origClosure = closureToReturn(origClosure,userId);
+        origClosure = closureToReturn(origClosure, userId);
 
         try {
-            closuresToReturn.add(closureService.closureToPlain(currentClosure,null));
-            closuresToReturn.add(closureService.closureToPlain(origClosure,null));
-        }catch (Exception e){
-            logger.error(e.getMessage(),e);
+            closuresToReturn.add(closureService.closureToPlain(currentClosure, null));
+            closuresToReturn.add(closureService.closureToPlain(origClosure, null));
+        } catch (Exception e) {
+            logger.error(e.getMessage(), e);
         }
         return closuresToReturn;
     }
 
     @GetMapping(value = "/compare/{currentClosureId}")
-    public PlainClosure getPlainClosureForCompare(@RequestHeader("X-TENANT-CODE")String tenantCode,
-                                               @PathVariable("userId")Long userId,
-                                               @PathVariable("currentClosureId")Long currentClosureId) throws IOException {
+    public PlainClosure getPlainClosureForCompare(@RequestHeader("X-TENANT-CODE") String tenantCode,
+                                                  @PathVariable("userId") Long userId,
+                                                  @PathVariable("currentClosureId") Long currentClosureId) throws IOException {
         GrantClosure currenClosure = closureService.getClosureById(currentClosureId);
-        currenClosure = closureToReturn(currenClosure,userId);
-
+        currenClosure = closureToReturn(currenClosure, userId);
 
 
         ClosureSnapshot tempSnapshot = new ClosureSnapshot();
         tempSnapshot.setGrantRefundAmount(currenClosure.getGrant().getRefundAmount());
         tempSnapshot.setGrantRefundReason(currenClosure.getGrant().getRefundReason());
         List<ActualRefund> actualRefunds = grantService.getActualRefundsForGrant(currenClosure.getGrant().getId());
-        if(actualRefunds!=null && !actualRefunds.isEmpty()){
+        if (actualRefunds != null && !actualRefunds.isEmpty()) {
             tempSnapshot.setActualRefunds(new ObjectMapper().writeValueAsString(actualRefunds));
         }
-        return closureService.closureToPlain(currenClosure,tempSnapshot);
+        return closureService.closureToPlain(currenClosure, tempSnapshot);
     }
 
     private void checkAndReturnHistoricalCLosure(@PathVariable("userId") Long userId, GrantClosure closure) {
@@ -2279,7 +2279,7 @@ public class GrantClosureController {
 
     @GetMapping("/reasons")
     public List<ClosureReason> getClosureReasons(
-            @PathVariable("userId") Long userId){
+            @PathVariable("userId") Long userId) {
 
         return grantService.getClosureReasons(userService.getUserById(userId).getOrganization().getId());
     }
@@ -2289,7 +2289,7 @@ public class GrantClosureController {
         try {
 
             ClosureSnapshot snapshot = new ClosureSnapshot();
-            snapshot.setAssignedToId(currentUser!=null?currentUser.getId():null);
+            snapshot.setAssignedToId(currentUser != null ? currentUser.getId() : null);
             snapshot.setClosureId(closure.getId());
             snapshot.setReason(closure.getReason());
             snapshot.setDescription(closure.getDescription());
@@ -2297,7 +2297,7 @@ public class GrantClosureController {
             String stringAttribs = new ObjectMapper().writeValueAsString(closure.getClosureDetails());
             snapshot.setStringAttributes(stringAttribs);
             snapshot.setFromStringAttributes(stringAttribs);
-            snapshot.setAssignedToId(currentUser!=null?currentUser.getId():null);
+            snapshot.setAssignedToId(currentUser != null ? currentUser.getId() : null);
             snapshot.setMovedBy(previousUser.getId());
             snapshot.setFromNote(closure.getNote());
             snapshot.setFromStateId(fromStatusId);
@@ -2306,7 +2306,7 @@ public class GrantClosureController {
             snapshot.setGrantRefundAmount(closure.getGrant().getRefundAmount());
             snapshot.setGrantRefundReason(closure.getGrant().getRefundReason());
             List<ActualRefund> refunds = grantService.getActualRefundsForGrant(closure.getGrant().getId());
-            if(refunds !=null && !refunds.isEmpty()){
+            if (refunds != null && !refunds.isEmpty()) {
                 snapshot.setActualRefunds(new ObjectMapper().writeValueAsString(refunds));
             }
 
@@ -2318,7 +2318,7 @@ public class GrantClosureController {
 
     @GetMapping("/{closureId}/history/")
     public List<GrantClosureHistory> getClosureHistory(@PathVariable("closureId") Long closureId,
-                                                @PathVariable("userId") Long userId, @RequestHeader("X-TENANT-CODE") String tenantCode) {
+                                                       @PathVariable("userId") Long userId, @RequestHeader("X-TENANT-CODE") String tenantCode) {
 
         List<GrantClosureHistory> history = new ArrayList<>();
         List<ClosureSnapshot> closureSnapshotHistory = closureSnapshotService.getClosureSnapshotForClosure(closureId);
@@ -2348,18 +2348,18 @@ public class GrantClosureController {
 
     @GetMapping("{grantId}/warnings")
     public ResponseEntity<ClosureWarnings> getClosureWarning(@PathVariable("userId") Long userId,
-                                            @RequestHeader("X-TENANT-CODE") String tenantCode,
-                                            @PathVariable("grantId")Long grantId){
+                                                             @RequestHeader("X-TENANT-CODE") String tenantCode,
+                                                             @PathVariable("grantId") Long grantId) {
 
 
         List<WorkflowStatus> reportWfStatuses = workflowStatusService.findByWorkflow(
-                workflowService.findWorkflowByGrantTypeAndObject(grantService.getById(grantId).getGrantTypeId(),REPORT)
+                workflowService.findWorkflowByGrantTypeAndObject(grantService.getById(grantId).getGrantTypeId(), REPORT)
         );
 
         List<Report> reportsInProgress = new ArrayList<>();
         reportWfStatuses.removeIf(ws -> ws.getInternalStatus().equalsIgnoreCase(DRAFT) || ws.getInternalStatus().equalsIgnoreCase(CLOSED));
-        for(WorkflowStatus status :reportWfStatuses){
-            reportsInProgress.addAll(reportService.findReportsByStatusForGrant(status,grantService.getById(grantId)));
+        for (WorkflowStatus status : reportWfStatuses) {
+            reportsInProgress.addAll(reportService.findReportsByStatusForGrant(status, grantService.getById(grantId)));
         }
 
 
@@ -2368,29 +2368,29 @@ public class GrantClosureController {
         );
 
         disbursementWfStatuses.removeIf(ws -> ws.getInternalStatus().equalsIgnoreCase(DRAFT) || ws.getInternalStatus().equalsIgnoreCase(CLOSED) || ws.getInternalStatus().equalsIgnoreCase(ACTIVE));
-        List<Disbursement> disbursementsInProgress = disbursementService.getDibursementsForGrantByStatuses(grantId,disbursementWfStatuses.stream().mapToLong(WorkflowStatus::getId).boxed().collect(Collectors.toList()));
+        List<Disbursement> disbursementsInProgress = disbursementService.getDibursementsForGrantByStatuses(grantId, disbursementWfStatuses.stream().mapToLong(WorkflowStatus::getId).boxed().collect(Collectors.toList()));
 
         Grant grantInAmendment = null;
-        if(grantService.getById(grantId).getAmendGrantId()!=null){
+        if (grantService.getById(grantId).getAmendGrantId() != null) {
             grantInAmendment = grantService.getById(grantService.getById(grantId).getAmendGrantId());
         }
 
-        return new ResponseEntity<>(new ClosureWarnings(disbursementsInProgress,reportsInProgress,grantInAmendment), HttpStatus.OK);
+        return new ResponseEntity<>(new ClosureWarnings(disbursementsInProgress, reportsInProgress, grantInAmendment), HttpStatus.OK);
     }
 
     @PutMapping("/{closureId}/actualRefund")
     public ActualRefund addActualRefund(@PathVariable("userId") Long userId,
                                         @PathVariable("closureId") Long closureId,
                                         @RequestHeader("X-TENANT-CODE") String tenantCode,
-                                        @RequestBody ActualRefund actualRefund){
+                                        @RequestBody ActualRefund actualRefund) {
 
         SimpleDateFormat df = new SimpleDateFormat(DD_MMM_YYYY);
         try {
-            if(actualRefund.getRefundDateStr()!=null) {
+            if (actualRefund.getRefundDateStr() != null) {
                 actualRefund.setRefundDate(df.parse(actualRefund.getRefundDateStr()));
             }
         } catch (ParseException e) {
-            logger.error(e.getMessage(),e);
+            logger.error(e.getMessage(), e);
         }
         actualRefund.setAssociatedGrant(closureService.getClosureById(closureId).getGrant());
         return closureService.saveActualRefund(actualRefund);
@@ -2398,11 +2398,11 @@ public class GrantClosureController {
 
     @DeleteMapping("/{closureId}/actualRefund/{actualRefundId}")
     public void addActualRefund(@PathVariable("userId") Long userId,
-                                        @PathVariable("closureId") Long closureId,
-                                        @PathVariable("actualRefundId") Long actualRefundId,
-                                        @RequestHeader("X-TENANT-CODE") String tenantCode){
+                                @PathVariable("closureId") Long closureId,
+                                @PathVariable("actualRefundId") Long actualRefundId,
+                                @RequestHeader("X-TENANT-CODE") String tenantCode) {
 
-            closureService.deleteActualRefund(closureService.getActualRefundById(actualRefundId));
+        closureService.deleteActualRefund(closureService.getActualRefundById(actualRefundId));
     }
 
     private List<DatePeriod> getReportingFrequencies(DateTime st, DateTime en, Frequency frequency) {
@@ -2481,16 +2481,16 @@ public class GrantClosureController {
     private DatePeriodLabel endOfQuarter(DateTime st) {
         if (st.getMonthOfYear() >= Month.JANUARY.getValue() && st.getMonthOfYear() <= Month.MARCH.getValue()) {
             return new DatePeriodLabel(st.withMonthOfYear(Month.MARCH.getValue()),
-                    "Quarterly Report - Q4 " +(st.getYear() - 1) + FILE_SEPARATOR
-                            +(String.valueOf(st.getYear()).substring(2, 4)));
+                    "Quarterly Report - Q4 " + (st.getYear() - 1) + FILE_SEPARATOR
+                            + (String.valueOf(st.getYear()).substring(2, 4)));
         } else if (st.getMonthOfYear() >= Month.APRIL.getValue() && st.getMonthOfYear() <= Month.JUNE.getValue()) {
             return new DatePeriodLabel(st.withMonthOfYear(Month.JUNE.getValue()),
-                    "Quarterly Report - Q1 " +(st.getYear()) + FILE_SEPARATOR
-                            +(String.valueOf(st.getYear() + 1).substring(2, 4)));
+                    "Quarterly Report - Q1 " + (st.getYear()) + FILE_SEPARATOR
+                            + (String.valueOf(st.getYear() + 1).substring(2, 4)));
         } else if (st.getMonthOfYear() >= Month.JULY.getValue() && st.getMonthOfYear() <= Month.SEPTEMBER.getValue()) {
             return new DatePeriodLabel(st.withMonthOfYear(Month.SEPTEMBER.getValue()),
-                    "Quarterly Report - Q2 " +(st.getYear()) + FILE_SEPARATOR
-                            +(String.valueOf(st.getYear() + 1).substring(2, 4)));
+                    "Quarterly Report - Q2 " + (st.getYear()) + FILE_SEPARATOR
+                            + (String.valueOf(st.getYear() + 1).substring(2, 4)));
         } else {
             return new DatePeriodLabel(st.withMonthOfYear(Month.DECEMBER.getValue()),
                     "Quarterly Report - Q3 " + (st.getYear()) + FILE_SEPARATOR
@@ -2520,7 +2520,7 @@ public class GrantClosureController {
             return new DatePeriodLabel(st.plusYears(1).withMonthOfYear(Month.MARCH.getValue()),
                     "Yearly Report " + (st.getYear()) + FILE_SEPARATOR
                             + (String.valueOf(st.getYear() + 1).substring(2, 4)));
-        } else{
+        } else {
             return new DatePeriodLabel(st.withMonthOfYear(Month.MARCH.getValue()),
                     "Yearly Report " + (st.getYear() - 1) + FILE_SEPARATOR
                             + (String.valueOf(st.getYear()).substring(2, 4)));
